--- a/client-expo/package.json
+++ b/client-expo/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "expo": "~44.0.0",
+    "expo-checkbox": "^2.0.0",
     "expo-status-bar": "~1.2.0",
     "mobx": "^6.5.0",
     "mobx-react": "^7.3.0",
@@ -21,7 +22,6 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-bouncy-checkbox": "^2.1.10",
-    "react-native-easy-grid": "^0.2.2",
     "react-native-web": "0.17.1",
     "uuid": "^8.3.2"
   },
