--- a/client-expo/package.json
+++ b/client-expo/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/uuid": "^8.3.4",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
@@ -22,6 +23,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-bouncy-checkbox": "^2.1.10",
+    "react-native-dotenv": "^3.3.1",
     "react-native-web": "0.17.1",
     "uuid": "^8.3.2"
   },
